NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libcupsfilters, gstoraster, gstopdf, gstopxl: Moved core
	  functionality of gstoraster into the ghostscript() filter
	  function.
	- braille: Support new liblouis tables not containing a
          display name (Pull request #303)
	- libcupsfilters: Added filterChain() filter function to run
	  several filter functions in a chain.
	- libcupsfilters, pdftopdf: Moved core functionality of
	  pdftopdf into the pdftopdf() filter function (Pull request
	  #301, #307).
	- Build system: Let ./configure not error out when there is
	  more than one DejaVuSans.ttf test font candidate (Issue
	  #300).
	- cups-browsed: Crash when a remote printer set as default
	  gets removed, due to missing variable in printf() call
	  (Issue #299).
	- COPYING: Fixed several typos
	- libcupsfilters: Fixed typo in log message of
	  get_printer_attributes functions.
	- cups-browsed: Fixed typos in configuration file and man page
	- libcupsfilters: Let the PPD generator not suffix page size
	  names with ".Borderless" if all page sizes would get this
	  suffix, for example for printers which generally print
	  borderless.
	- driverless, driverless-fax, libcupsfilters: Added IPP Fax
	  Out support. Now printer setup tools list an additional fax
	  "driver".  A fax queue is created by selecting this
	  driver. Jobs have to be sent with "-o phone=12345" to supply
	  the destination phone number (Pull request #280, #293,
	  #296, #302, #304, #305, #306, Issue #298).
	- libfontembed: Silenced warning with gcc 10.x (Pull request
	  #287).
	- libcupsfilters, rastertopdf, rastertopclm: Moved core
	  functionality of rastertopdf into the rastertopdf() filter
	  function (Pull request #288, #289).
	- cups-browsed: Added ./configure options
	  --enable-saving-created-queues and
	  --with-remote-cups-local-queue-naming (Pull request: #253,
	  #285).