@@ -199,12 +199,6 @@ Files: filter/strcasestr.c
 Copyright: 1990, 1993, The Regents of the University of California
 License: BSD-4-clause
 
-Files: filter/sys5ippprinter.c
-Copyright: 2011-2013, Till Kamppeter
-  2007-2011, Apple Inc
-  1997-2006, Easy Software Products
-License: GPL-2
-
 Files: filter/texttotext.c
 Copyright: 2011-2013, Till Kamppeter
   2007-2011, Apple Inc
